--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ googleAnalytics = ""
 	provider = "GitHub"
 	repo_url = "https://github.com/zhengyin"
 
-	version = "1.0.0"
+	version = ""
 	logo = "images/logo.jpg"
 	favicon = ""
 
@@ -46,7 +46,7 @@ googleAnalytics = ""
 
 [[menu.main]]
 	name   = "博文分类"
-	url    = "/"
+	url    = "/post/index.html"
 	weight = 0
 
 
